<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".menu.map.NewYikeSpot">

    <TextView
        android:id="@+id/addNewSpotHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_spot_header"
        android:textSize="20dp"
        android:textColor="@color/app_gray_title_text_color"
        android:paddingTop="5dp" />

    <ImageView
        android:id="@+id/image_yikespot"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:clickable="true"
        android:src="@drawable/ic_camera_frame"
        android:paddingTop="20dp">
        <!-- android:alpha="0.2" -->
    </ImageView>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_spot_name_hit"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints"
        app:counterEnabled="true"
        app:counterMaxLength="35">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newSpotName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="35"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/newSpot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_spot_add_btn"
        app:icon="@drawable/ic_upload_24dp"
        app:iconPadding="-32dp"
        tools:ignore="HardcodedText" />
</LinearLayout>