<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".menu.map.YikesSpotActivity" >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="5dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:srcCompat="@drawable/ic_image_default_24px"
            android:background="@color/app_bg_color"
            android:scaleType="centerCrop"
            />
    </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="YikeSpot Title"
            android:textColor="@color/purple_200"
            android:textSize="25sp"
            android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:id="@+id/creatorHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/app_gray_title_text_color"
            android:layout_weight="1"
            android:text="@string/spot_author" />
        <TextView
            android:id="@+id/coordsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/app_gray_title_text_color"
            android:layout_weight="1"
            android:text="@string/spot_coords" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/SettingsCardView"
            android:layout_gravity="center"
            android:layout_width="340dp"
            android:layout_height="25dp"
            card_view:cardCornerRadius="4dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/creator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/teal_200"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_account_circle_24px"
                android:drawablePadding="5dp"
                android:onClick="onClick"
                android:ellipsize="end"
                android:maxLines="1"
                android:clickable="true"
                android:text="Author Very Long Name" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="@style/SettingsCardView"
            android:layout_gravity="center"
            android:layout_width="380dp"
            android:layout_height="25dp"
            card_view:cardCornerRadius="4dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="45dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/latlong"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_explore_24px"
                android:paddingLeft="5dp"
                android:textSize="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="00000, 00000" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID: #########-#######-######-######" />
    </LinearLayout>

    <Button
        android:id="@+id/removeSpot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/spot_remove_spot"
        android:textStyle="bold"
        app:icon="@drawable/ic_delete_black_24dp"
        app:iconPadding="-32dp"
        tools:ignore="HardcodedText" />

</LinearLayout>